--- a/content/blog-posts/2025-06-17-making-callouts-obsidian.ipynb
+++ b/content/blog-posts/2025-06-17-making-callouts-obsidian.ipynb
@@ -13,6 +13,21 @@
     "\n",
     "This post will walk you through how to make your own **custom callout blocks** in Obsidian.\n",
     "\n",
+    "## Table of Contents\n",
+    "\n",
+    "  - [Steps Overview](#steps-overview)\n",
+    "    - [Step 1: Enable Custom CSS Snippets](#step-1-enable-custom-css-snippets)\n",
+    "    - [Step 2: Define a Custom Callout Block in the css file](#step-2-define-a-custom-callout-block-in-the-css-file)\n",
+    "    - [Step 3: Customise Labels, Icons & Colours](#step-3-customise-labels-icons--colours)\n",
+    "    - [Step 4: Using Theme Variables for Consistent Colours](#step-4-using-theme-variables-for-consistent-colours)\n",
+    "  - [Helpful Tips](#helpful-tips)\n",
+    "    - [Foldable Callouts](#foldable-callouts)\n",
+    "    - [Creating a Colour Overlay on a Dark Base](#creating-a-colour-overlay-on-a-dark-base)\n",
+    "    - [Nesting Callouts](#nesting-callouts)\n",
+    "  - [My Exact CSS File](#my-exact-css-file)\n",
+    "  - [Final Tips](#final-tips)\n",
+    "\n",
+    "\n",
     "---\n",
     "\n",
     "## Steps Overview\n",
