--- a/content/blog-posts/2025-06-17-making-callouts-obsidian.ipynb
+++ b/content/blog-posts/2025-06-17-making-callouts-obsidian.ipynb
@@ -159,6 +159,7 @@
     "Then, reference these variables when creating your callouts:\n",
     "\n",
     "```css\n",
+    "/* === QUESTION === */\n",
     ".callout[data-callout=\"question\"] {\n",
     "    --callout-color: var(--drac-pink-rgb);\n",
     "    --callout-icon: lucide-help-circle;\n",
@@ -171,6 +172,7 @@
     "For example, your `theorem` callout could use the purple variable:\n",
     "\n",
     "```css\n",
+    "/* === THEOREM === */\n",
     ".callout[data-callout=\"theorem\"] {\n",
     "    --callout-color: var(--drac-purple-rgb);\n",
     "    --callout-icon: lucide-square-sigma;\n",
@@ -181,6 +183,7 @@
     "And your `warning` set could use:\n",
     "\n",
     "```css\n",
+    "/* === WARNING === */\n",
     ".callout[data-callout=\"warning\"] {\n",
     "    --callout-color: var(--drac-yellow-rgb);\n",
     "    --callout-icon: lucide-alert-triangle;\n",
