--- a/content/blog-posts/2025-06-17-making-callouts-obsidian.ipynb
+++ b/content/blog-posts/2025-06-17-making-callouts-obsidian.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "Callouts are a powerful way to visually style notes in [Obsidian](https://obsidian.md), especially when organising research, study notes, to-do lists, or even documenting your projects. While Obsidian comes with built-in callout styles like `> [!note]`, you can easily create your own custom callouts with a bit of CSS.\n",
     "\n",
+    "![alt text](../../img/blogs/obsidian-callouts/fig6.png)\n",
+    "\n",
     "This post will walk you through how to make your own **custom callout blocks** in Obsidian.\n",
     "\n",
     "## Table of Contents\n",
