--- a/content/blog-posts/2025-06-17-making-callouts-obsidian.ipynb
+++ b/content/blog-posts/2025-06-17-making-callouts-obsidian.ipynb
@@ -266,14 +266,8 @@
     "\n",
     "![Nested callouts in Obsidian](../../img/blogs/obsidian-callouts/fig5.png)\n",
     "\n",
-    "Each level keeps its own style, icon, and background overlay, making complex structures more readable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "91993899",
-   "metadata": {},
-   "source": [
+    "Each level keeps its own style, icon, and background overlay, making complex structures more readable.\n",
+    "\n",
     "## My Exact CSS File\n",
     "\n",
     "Below is the complete CSS file I use for my custom callouts in Obsidian. The colour variables are defined at the top using the Dracula theme palette, but you can easily swap them out to match your own preferred colour scheme.\n",
@@ -436,8 +430,23 @@
     "    background-color: rgba(var(--drac-yellow-rgb), 0.2);\n",
     "}\n",
     "```\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "## Final Tips\n",
+    "\n",
+    "* Define custom callout names that suit your workflow, like `note`, `figure`, `equation`, `bug`, or `reminder`.\n",
+    "* Use `:root` variables to keep your colors consistent across different callouts and future-proof your CSS.\n",
+    "* Match your callouts to your Obsidian theme for a more cohesive visual experience.\n",
+    "* Use icons from [Lucide](https://lucide.dev/) to make each callout instantly recognizable.\n",
+    "* Experiment with different background opacities to find the right balance for readability.\n",
+    "* Consider using foldable callouts to keep your notes tidy and focused."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91993899",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
